addToCollection function completed

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Week 5 Assignment.</title>
+    <title>Week 5 Assignment</title>
     <script src="scripts/3-music-collection.js" charset="utf-8"></script>
   </head>
   <body>
