completed week 5 assignment part 3

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,5 +9,12 @@
     <h1>Week 5 Assignment - Part 3</h1>
     <p>See console for output.</p>
     <!-- Create an unordered list with any questions you have -->
+    <ul>
+      <li>Can you make/ is there a way to make a function with multiple input parameters, but then only enter one?</li>
+        <ul>
+          <li>e.g. search("Kesha") and then it returns album details for every kesha album in collection? But search input was (albumTitle, artist, yearPublished)? Instead of doing this: ("", "Kesha", undefined), etc.?</li>
+        </ul>
+        <li>How to add tracks to objects array, array inside an array? I left in greyed out code with my attempts, but I don't know how to proceed from there. How to add tracks to specific object in collection?</li>
+    </ul>
   </body>
 </html>
